# f5ttsMCP

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml
daemon/: daemon_ctl.sh  daemon_wrapper.sh  f5_daemon.py
mcp/: mcp_server.py  mcp_wrapper.sh  replay_chunks.sh
